# clearcut

./: README.md  pyproject.toml  setup.py
examples/: clearcut_example.py
src/: clearcut.py
src/clearcut/: __init__.py  logutils.py  otlputils.py
